# Offline-Assistant

./: .gitignore  Makefile  README.md  offline_assistant.py  pyproject.toml
.github/workflows/: ci.yml
src/echoshield/: __init__.py  api.py  cli.py  engine.py
tests/: conftest.py  test_utils.py
